@@ -1,6 +1,7 @@
 - Added support for unfiltered HTML in the instructions setting for users with the unfiltered_html capability.
 - Added the ability to configure emails to be sent when a User Input step updates the entry and remains in progress and when the step is completed.
 - Added the date field option to the step expiration setting.
+- Added the $field->gravityflow_is_editable and $field->gravityflow_is_display properties when the entry is on a User Input step to provide context to Gravity Forms add-ons that don't use GF_Field.
 - Added new functionality to the Sliced Invoices step:
 	- The Assign To, Assignee Email, Instructions, Display Fields, and Expiration settings.
 	- The Step Completion setting allowing completion of the step to be delayed until the invoice is paid.
